--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
 
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required>
-      <label for="country">Țara în care trăiești:</label>
+      <label for="country">Țara:</label>
       <select id="country" name="country" required>
         <option value="">-- Selectează țara --</option>
         <option value="romania">România</option>
