--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="card">
           <img src="muffins.jpg" alt="Briose">
           <h3>Desertul preferat</h3>
-          <p>Desertul meu preferat sunt biosele, deoarece le pot personaliza, adaugad orice inauntrul lor si punand, sau nu, glazura pe deasupra.</p>
+          <p>Desertul meu preferat sunt biosele, deoarece le pot personaliza, adaugand orice inauntrul lor si punand, sau nu, glazura pe deasupra.</p>
         </div>
       </div>
     </section>
